test_output.txt
Running comprehensive test validation (quick mode)...

=== SYNTAX VALIDATION ===
Checking syntax for 2857 test files and critical configuration...
❌ Syntax validation failed: 1 errors found
  - C:\Users\antho\OneDrive\Desktop\Netra\netra-core-generation-1\auth_service\tests\integration\test_oauth_provider_integration.py:   File "C:\Users\antho\OneDrive\Desktop\Netra\netra-core-generation-1\auth_service\tests\integration\test_oauth_provider_integration.py", line 194
    created_user = await self.auth_service.create_oauth_user(oauth_user_info)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: 'await' outside async function

